tests/doWhile/invalid/Semantic/DoWhileTruErr.wacc
# true typo

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  do
    skip
  while tru
end
